--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "insta",
   "version": "0.0.0",
   "private": true,
+  "description": "",
   "scripts": {
     "start": "node ./bin/www"
   },
