--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "description": "",
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
